horizontal align correction

--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -55,7 +55,7 @@ a{
 }
 
 .section-header{
-    text-align: var(--section-heaader-align);    
+    text-align: var(--section-header-align);    
 }
 
 .section-tagline{
